<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup">

  <ImageView
      android:src="@drawable/baseline_account_circle_24"
      android:contentDescription="@string/account"
      android:layout_gravity="center"
      android:layout_marginBottom="30dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

  </ImageView>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:gravity="center">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:minHeight="48dp">


    </com.google.android.material.textfield.TextInputEditText>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="350dp"
      android:gravity="center"
      android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Password"
        android:hint="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputEditText>
  </com.google.android.material.textfield.TextInputLayout>

  <ProgressBar
      android:id="@+id/progressbar"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <Button
      android:id="@+id/btn_signup"
      android:text="@string/signup"
      android:layout_marginTop="10dp"
      android:textSize="20dp"
      android:gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

  </Button>

  <TextView
      android:id="@+id/login_now"
      android:text="@string/click_to_login"
      android:gravity="center"
      android:textSize="20dp"
      android:layout_marginTop="20dp"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
</LinearLayout>